# svgpp

./: .gitignore  INSTALL  README.md  azure-pipelines.yml
demo/agg/: bmp_header.hpp  common.hpp  gradient.cpp  svgpp_agg_render.cpp
doc/: .readthedocs.yaml
doc/sphinx/: CMakeLists.txt  Makefile  advanced.rst  basic_shapes.rst  color.rst  conf.py  detail.rst  document_traversal.rst  error.rst  faq.rst  help.rst  index.rst  installation.rst  iri.rst  length.rst  lesson01.rst  license.rst  make.bat  markers.rst  overview.rst  path.rst  reference.rst  reference01.rst  text.rst  transform.rst  value.rst  value_parser.rst  viewport.rst
include/exboost/: README.md  parameter.hpp
include/exboost/parameter/: binding.hpp  config.hpp  keyword.hpp  macros.hpp  match.hpp  name.hpp  parameters.hpp  preprocessor.hpp  python.hpp  value_type.hpp
include/svgpp/: attribute_dispatcher.hpp  attribute_traversal.hpp  attribute_traversal_common.hpp  attribute_traversal_prioritized.hpp  attribute_traversal_sequential.hpp  config.hpp  context_policy.hpp  context_policy_angle_factory.hpp  context_policy_color_factory.hpp  context_policy_fwd.hpp  context_policy_iri.hpp  context_policy_load_path.hpp  context_policy_load_text.hpp  context_policy_load_transform.hpp  context_policy_load_value.hpp  definitions.hpp  document_traversal.hpp  integer_color_factory.hpp  number_type.hpp  skip_icc_color_factory.hpp  svgpp.hpp  template_parameters.hpp  unitless_angle_factory.hpp  unitless_length_factory.hpp  xml_policy_fwd.hpp
include/svgpp/adapter/: basic_shapes.hpp  circle.hpp  ellipse.hpp  line.hpp  list_of_points.hpp  marker_viewport.hpp  path.hpp  path_markers.hpp  rect.hpp  transform.hpp  viewport.hpp
include/svgpp/attribute_traversal/: attribute_traversal.hpp  common.hpp  prioritized.hpp  sequential.hpp
include/svgpp/detail/: adapt_context.hpp  attribute_id.hpp  attribute_id_to_tag.hpp  attribute_name.hpp  attribute_name_to_id.hpp  delegate_error_policy.hpp  delegate_load_value_policy.hpp  element_id_to_tag.hpp  element_type_id.hpp  literal_char_types.hpp  literal_values_dictionary.hpp  names_dictionary.hpp  namespace.hpp  required_attributes_check.hpp
include/svgpp/factory/: angle.hpp  color.hpp  context.hpp  icc_color_stub.hpp  integer_color.hpp  length.hpp  unitless_angle.hpp  unitless_length.hpp
include/svgpp/parser/: angle.hpp  animation.hpp  color.hpp  css_style_iterator.hpp  iri.hpp  length.hpp  list_of_points.hpp  literal_enumeration.hpp  misc.hpp  number.hpp  paint.hpp  path_data.hpp  percentage_or_length.hpp  points.hpp  simple_enumeration.hpp  string.hpp  transform_list.hpp  type_or_literal.hpp  value_parser.hpp  value_parser_fwd.hpp
include/svgpp/policy/: attribute_traversal.hpp  basic_shapes.hpp  basic_shapes_events.hpp  document_traversal_control.hpp  error.hpp  icc_color.hpp  iri.hpp  length.hpp  load_basic_shapes.hpp  load_path.hpp  load_text.hpp  load_transform.hpp  load_value.hpp  load_viewport.hpp  marker_events.hpp  markers.hpp  notify.hpp  path.hpp  path_events.hpp  text_events.hpp  transform.hpp  transform_events.hpp  value_events.hpp  viewport.hpp  viewport_events.hpp
include/svgpp/traits/: angle_units.hpp  attribute_groups.hpp  attribute_type.hpp  attribute_without_parser.hpp  child_element_types.hpp  element_groups.hpp  element_required_attributes.hpp  element_with_text_content.hpp  inherited_property.hpp  length_dimension_by_attribute.hpp  length_direction_by_attribute.hpp  length_units.hpp  literal_enumeration_values.hpp  overflow_hidden_elements.hpp  simple_enumeration_values.hpp
include/svgpp/utility/: arc_endpoint_to_center.hpp  arc_to_bezier.hpp  boost_parameter_fixed.hpp  calculate_viewbox_transform.hpp  calculate_viewport_transform.hpp  gil_utility.h
samples/: CMakeLists.txt  sample_filter.cpp  svg_dom.hpp
src/: CMakeLists.txt
src/demo/: report.py
src/demo/agg/: CMakeLists.txt  bmp_header.hpp  clip_buffer.cpp  clip_buffer.hpp  clip_path.cpp  clip_path.hpp  common.hpp  filter.cpp  filter.hpp  gradient.cpp  gradient.hpp  parser_libxml.cpp  parser_libxml.hpp  parser_msxml.cpp  parser_msxml.hpp  parser_rapidxml_ns.hpp  stylable.hpp  svgpp_agg_render.cpp
src/demo/render/: CMakeLists.txt  clip_buffer.cpp  clip_buffer.hpp  common.hpp  filter.cpp  gradient.cpp  gradient.hpp  parser_libxml.cpp  parser_libxml.hpp  parser_msxml.cpp  parser_rapidxml_ns.cpp  parser_rapidxml_ns.hpp  parser_xerces.cpp  parser_xerces.hpp  stb.cpp  stylable.hpp  svgpp_parser_impl.cpp  svgpp_render.cpp
src/demo/report_templates/: record.tmpl  report.tmpl
src/samples/: CMakeLists.txt  sample01a.cpp  sample01b.cpp  sample01c.cpp  sample01d.cpp  sample01e.cpp  sample01f.cpp  sample01g.cpp  sample01h.cpp  sample01i.cpp  sample01j.cpp  sample01j.hpp  sample01j_impl.cpp  sample_animation.cpp  sample_filter.cpp  sample_gradient.cpp  sample_iri.cpp  sample_path.cpp  sample_transform01.cpp  sample_transform02.cpp  sample_value01.cpp  sample_value02.cpp  svg_dom_sample.cpp  svgpp_parser_impl.cpp
src/test/: CMakeLists.txt  attribute_traversal_test.cpp  basic_shapes_test.cpp  clock_value_grammar_test.cpp  color_grammar_test.cpp  document_traversal_a_test.cpp  full_parse_main.cpp  full_parse_test.cpp  full_parse_test2.cpp  full_parse_test_common.hpp  icc_color_grammar_test.cpp  length_factory_test.cpp  list_of_points_grammar_test.cpp  list_of_points_test.cpp  path_grammar_test.cpp  path_markers_adapter_test.cpp  polyline_markers_test.cpp  test_path_context.hpp  transform_grammar_test.cpp  transform_strict_grammar_test.cpp  urange_grammar_test.cpp  value_parser_length_test.cpp  value_parser_paint_ie_test.cpp  value_parser_paint_test.cpp  value_parser_path_test.cpp  value_parser_test.cpp  value_parser_transform_test.cpp
test/: CMakeLists.txt  attribute_traversal_test.cpp  boost_param_test.cpp  css_style_iterator_test.cpp  dictionary_test.cpp  length_factory_test.cpp  parser.cpp  path_adapter_test.cpp  path_grammar_test.cpp  preserveAspectRatio_test.cpp  supported_value_parsers_test.cpp  test_path_context.hpp  transform_grammar_test.cpp  value_parser_paint_test.cpp  value_parser_test.cpp
(+97 files in other folders)
